--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -12,17 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
     
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
         with:
-          python-version: 3.9.1
-      - name: Set timezone
+          dotnet-version: 6.0.x
+      - name: Dotnet Publish
         run: |
-          cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-      - name: install pip packages
-        run: |
-          python -m pip install --upgrade pip
-          pip3 install -r requirements.txt
+          dotnet publish TestWechat -c Release -o deploy
       - name: weixin
         run: |
-          python3 main.py
+          dotnet deploy/TestWechat.dll
