--- a/.github/workflows/weixin.yml
+++ b/.github/workflows/weixin.yml
@@ -17,7 +17,10 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Install dependencies
-        run: dotnet restore
+        run: |
+          ls
+          ls TestWechat
+          dotnet restore
       
       - name: Build
         run: dotnet build --configuration Release --no-restore
